removed unnecessary files

--- a/responsives/market/Pages/2014StateOfTheGrid/navigation.html
+++ b/responsives/market/Pages/2014StateOfTheGrid/navigation.html
@@ -8,11 +8,7 @@
 
 <body>
 	<ul>
-    	<li><a href="businessEfficiency.htm">businessEfficiency.htm</a></li>
-        <li><a href="extendingBenefits.htm">extendingBenefits.htm</a></li>
-        <li><a href="GridResiliency.htm">GridResiliency.htm</a></li>
-        <li><a href="Renewablesintegration.htm">Renewablesintegration.htm</a></li>
-        <li><a href="smarterGrid.htm">smarterGrid.htm</a></li>
+    	<li><a href="template_a.html">Template A</a></li>
     </ul>
 </body>
 </html>
