--- a/responsives/market/Pages/2014StateOfTheGrid/template_A.html
+++ b/responsives/market/Pages/2014StateOfTheGrid/template_A.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
 
-
 		<title>Template A</title>
 
     <!-- CSS including core Bootstrap styles -->
@@ -38,8 +37,7 @@
       <div class="panel-group" id="accordionA">
         <div class="panel panel-default">
           <div  class="panel-heading">
-            <h4 class="panel-title"><a data-parent="#accordionA" data-target=
-                    "#content-a" data-toggle="collapse"></a></h4>
+            <h4 class="panel-title"><a data-parent="#accordionA" data-target="#content-a" data-toggle="collapsible" href="#content-txt">Header</a></h4>
           </div>
           <div class="collapsible panel-collapse collapse in" id="content-a">
             <div class="panel-body">
@@ -66,8 +64,7 @@
       <div class="panel-group" id="accordionB">
         <div class="panel panel-default">
           <div  class="panel-heading">
-            <h4 class="panel-title"><a data-parent="#accordionB" data-target=
-                    "#content-B" data-toggle="collapse"></a></h4>
+            <h4 class="panel-title"><a data-parent="#accordionB" data-target="#content-B" data-toggle="collapse"></a></h4>
           </div>
           <div class=" collapsible panel-collapse collapse in" id="content-B">
             <div class="panel-body">
@@ -85,6 +82,22 @@
           </div><!-- /.collapsible -->
         </div><!-- /.panel -->
       </div><!-- /.panel-group -->
+      <div class="panel-group" id="accordion">
+  <div class="panel panel-default" id="panel1">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-target="#collapseOne" 
+           href="#collapseOne">
+          Collapsible Group Item #1
+        </a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse collapse in">
+      <div class="panel-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      </div>
+    </div>
+  </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
