changes to directory structure

--- a/responsives/template_A.html
+++ b/responsives/template_A.html
@@ -64,9 +64,9 @@
       <div class="panel-group" id="accordionB">
         <div class="panel panel-default">
           <div  class="panel-heading">
-            <h4 class="panel-title"><a data-parent="#accordionB" data-target="#content-B" data-toggle="collapse"></a></h4>
+            <h4 class="panel-title"><a data-parent="#accordionB" data-target="#content-B" data-toggle="collapse">Header 2 list</a></h4>
           </div>
-          <div class=" collapsible panel-collapse collapse in" id="content-B">
+          <div class=" collapsible panel-collapse collapse" id="content-B">
             <div class="panel-body">
               <div id="sidebar-right" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                 <div>
